// Vitest Snapshot v1

exports[`should build \`custom-dist\` package 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

const VERSION = \\"1.0.0\\";

exports.VERSION = VERSION;
//# sourceMappingURL=index.cjs.map
"
`;

exports[`should build \`custom-dist\` package 2`] = `
"const VERSION = \\"1.0.0\\";

export { VERSION };
//# sourceMappingURL=index.js.map
"
`;

exports[`should build \`custom-dist\` package 3`] = `
"export declare const VERSION = \\"1.0.0\\";

export { }
"
`;

exports[`should build \`multi-export\` package 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

function defineConfig(options) {
  return options;
}

exports.defineConfig = defineConfig;
//# sourceMappingURL=index.cjs.map
"
`;

exports[`should build \`multi-export\` package 2`] = `
"function defineConfig(options) {
  return options;
}

export { defineConfig };
//# sourceMappingURL=index.js.map
"
`;

exports[`should build \`multi-export\` package 3`] = `
"export declare interface Config {
    plugins?: Plugin_2[];
}

export declare function defineConfig(options: Config): Config;

declare interface Plugin_2 {
}
export { Plugin_2 as Plugin }

export { }
"
`;
